[project]
name = "can-log-analyzer"
version = "26.0.2"
description = "CAN log Analyzer"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "chaitu-ycr", email = "chaitu.ycr@gmail.com" }]
keywords = ["python", "CAN", "log", "analyzer"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cantools",
    "python-can",
    "pandas",
    "pyarrow",
    "plotly",
    "nicegui[native]",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pyinstaller",
    "ruff",
    "pytest",
    "pytest-html",
    "pytest-sugar",
    "pytest-clarity",
    "pytest-cov",
    "pytest-xdist",
    "pytest-watch",
    "mkdocs",
    "mkdocs-puml",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-macros-plugin",
    "mkdocs-include-markdown-plugin",
    "pymdown-extensions",
]

[project.urls]
homepage = "https://github.com/chaitu-ycr/can-log-analyzer"
repository = "https://github.com/chaitu-ycr/can-log-analyzer/"
documentation = "https://chaitu-ycr.github.io/can-log-analyzer"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
